rtl support for tooltip/popovers + random cleanup

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -3962,13 +3962,13 @@ Anchor variants:<br />
 <button type="button" class="btn" data-cfw="tooltip" data-cfw-tooltip-placement="top" title="Tooltip on top">
   Tooltip on top
 </button>
-<button type="button" class="btn" data-cfw="tooltip" data-cfw-tooltip-placement="right" title="Tooltip on right">
+<button type="button" class="btn" data-cfw="tooltip" data-cfw-tooltip-placement="forward" title="Tooltip forward">
   Tooltip on right
 </button>
 <button type="button" class="btn" data-cfw="tooltip" data-cfw-tooltip-placement="bottom" title="Tooltip on bottom">
   Tooltip on bottom
 </button>
-<button type="button" class="btn" data-cfw="tooltip" data-cfw-tooltip-placement="left" title="Tooltip on left">
+<button type="button" class="btn" data-cfw="tooltip" data-cfw-tooltip-placement="reverse" title="Tooltip reverse">
   Tooltip on left
 </button>
 </p>
@@ -3983,8 +3983,8 @@ Anchor variants:<br />
     <div class="popover-arrow"></div>
   </div>
 
-  <div class="popover right">
-    <h3 class="popover-header">Popover right</h3>
+  <div class="popover forward">
+    <h3 class="popover-header">Popover forward</h3>
     <div class="popover-body">
       <p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
     </div>
@@ -3999,8 +3999,8 @@ Anchor variants:<br />
     <div class="popover-arrow"></div>
   </div>
 
-  <div class="popover left">
-    <h3 class="popover-header">Popover left</h3>
+  <div class="popover reverse">
+    <h3 class="popover-header">Popover reverse</h3>
     <div class="popover-body">
       <p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
     </div>
@@ -4016,7 +4016,7 @@ Anchor variants:<br />
   Popover on top
 </button>
 
-<button type="button" class="btn" data-cfw-popover-container="body" data-cfw="popover" data-cfw-popover-placement="right" data-cfw-popover-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+<button type="button" class="btn" data-cfw-popover-container="body" data-cfw="popover" data-cfw-popover-placement="forward" data-cfw-popover-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
   Popover on right
 </button>
 
@@ -4024,7 +4024,7 @@ Anchor variants:<br />
   Popover on bottom
 </button>
 
-<button type="button" class="btn" data-cfw-popover-container="body" data-cfw="popover" data-cfw-popover-placement="left" data-cfw-popover-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+<button type="button" class="btn" data-cfw-popover-container="body" data-cfw="popover" data-cfw-popover-placement="reverse" data-cfw-popover-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
   Popover on left
 </button>
 </p>
