--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -3223,7 +3223,7 @@ Anchor variants:<br />
 
 <h3>Media</h3>
 <div class="media">
-  <a href="#" class="d-flex me-1">
+  <a href="#" class="me-1">
     <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
   </a>
   <div class="media-body">
@@ -3237,7 +3237,7 @@ Anchor variants:<br />
     <h4 class="media-heading">Media heading</h4>
     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
   </div>
-  <a href="#" class="d-flex ms-1">
+  <a href="#" class="ms-1">
     <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
   </a>
 </div>
@@ -3245,14 +3245,14 @@ Anchor variants:<br />
 
 <h3>Nested media</h3>
 <div class="media">
-  <a href="#" class="d-flex me-1">
+  <a href="#" class="me-1">
     <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
   </a>
   <div class="media-body">
     <h4 class="media-heading">Media heading</h4>
     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
     <div class="media">
-      <a href="#" class="d-flex me-1">
+      <a href="#" class="me-1">
         <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
       </a>
       <div class="media-body">
@@ -3265,7 +3265,7 @@ Anchor variants:<br />
 
 <h3>Media alignment</h3>
 <div class="media">
-  <a href="#" class="d-flex flex-self-start me-1">
+  <a href="#" class="flex-self-start me-1">
     <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
   </a>
   <div class="media-body">
@@ -3276,7 +3276,7 @@ Anchor variants:<br />
 </div>
 
 <div class="media">
-  <a href="#" class="d-flex flex-self-center me-1">
+  <a href="#" class="flex-self-center me-1">
     <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
   </a>
   <div class="media-body">
@@ -3287,7 +3287,7 @@ Anchor variants:<br />
 </div>
 
 <div class="media">
-  <a href="#" class="d-flex flex-self-end me-1">
+  <a href="#" class="flex-self-end me-1">
     <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
   </a>
   <div class="media-body">
@@ -3301,7 +3301,7 @@ Anchor variants:<br />
 <h3>Media list</h3>
 <ul class="list-unstyled">
   <li class="media">
-    <a href="#" class="d-flex me-1">
+    <a href="#" class="me-1">
       <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
     </a>
     <div class="media-body">
@@ -3309,7 +3309,7 @@ Anchor variants:<br />
       <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
       <!-- Nested media object -->
       <div class="media">
-        <a href="#" class="d-flex me-1">
+        <a href="#" class="me-1">
           <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
         </a>
         <div class="media-body">
@@ -3317,7 +3317,7 @@ Anchor variants:<br />
           Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.
           <!-- Nested media object -->
           <div class="media">
-            <a href="#" class="d-flex me-1">
+            <a href="#" class="me-1">
               <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
             </a>
             <div class="media-body">
@@ -3329,7 +3329,7 @@ Anchor variants:<br />
       </div>
       <!-- Nested media object -->
       <div class="media">
-        <a href="#" class="d-flex me-1">
+        <a href="#" class="me-1">
           <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
         </a>
         <div class="media-body">
@@ -3344,7 +3344,7 @@ Anchor variants:<br />
       <h4 class="media-heading">Media heading</h4>
       Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.
     </div>
-    <a href="#" class="d-flex ms-1">
+    <a href="#" class="ms-1">
       <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
     </a>
   </li>
