--- a/test/visual/flexbox-cards.html
+++ b/test/visual/flexbox-cards.html
@@ -139,6 +139,18 @@ Holder.addTheme("gray", {
       </div>
     </div>
 
+    <h3>Card Group - Single card</h3>
+
+    <div class="card-group-sm">
+      <div class="card">
+        <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
 
     <hr />
 
