--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -2154,6 +2154,29 @@ Anchor variants:<br />
   </ul>
 </nav>
 
+<h3>Pagination w/ Text</h3>
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item">
+        <a class="page-link" href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+      </a>
+    </li>
+    <li class="page-item"><a href="#" class="page-link">1</a></li>
+    <li class="page-item"><a href="#" class="page-link">2</a></li>
+    <li class="page-item"><span class="page-text">&hellip;</span></li>
+    <li class="page-item"><a href="#" class="page-link">98</a></li>
+    <li class="page-item"><a href="#" class="page-link">99</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+        <span class="sr-only">Next</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+
 <h3>Pagination sizes</h3>
 <nav aria-label="...">
   <ul class="pagination pagination-xl">
@@ -2163,9 +2186,11 @@ Anchor variants:<br />
         <span class="sr-only">Previous</span>
       </a>
     </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link active" href="#">1</a></li>
     <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item"><span class="page-text">&hellip;</span></li>
+    <li class="page-item"><a href="#" class="page-link">98</a></li>
+    <li class="page-item"><a href="#" class="page-link">99</a></li>
     <li class="page-item">
       <a class="page-link" href="#" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
@@ -2182,9 +2207,11 @@ Anchor variants:<br />
         <span class="sr-only">Previous</span>
       </a>
     </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link active" href="#">1</a></li>
     <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item"><span class="page-text">&hellip;</span></li>
+    <li class="page-item"><a href="#" class="page-link">98</a></li>
+    <li class="page-item"><a href="#" class="page-link">99</a></li>
     <li class="page-item">
       <a class="page-link" href="#" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
@@ -2201,9 +2228,11 @@ Anchor variants:<br />
         <span class="sr-only">Previous</span>
       </a>
     </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link active" href="#">1</a></li>
     <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item"><span class="page-text">&hellip;</span></li>
+    <li class="page-item"><a href="#" class="page-link">98</a></li>
+    <li class="page-item"><a href="#" class="page-link">99</a></li>
     <li class="page-item">
       <a class="page-link" href="#" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
@@ -2220,9 +2249,11 @@ Anchor variants:<br />
         <span class="sr-only">Previous</span>
       </a>
     </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link active" href="#">1</a></li>
     <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item"><span class="page-text">&hellip;</span></li>
+    <li class="page-item"><a href="#" class="page-link">98</a></li>
+    <li class="page-item"><a href="#" class="page-link">99</a></li>
     <li class="page-item">
       <a class="page-link" href="#" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
@@ -2239,9 +2270,11 @@ Anchor variants:<br />
         <span class="sr-only">Previous</span>
       </a>
     </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link active" href="#">1</a></li>
     <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item"><span class="page-text">&hellip;</span></li>
+    <li class="page-item"><a href="#" class="page-link">98</a></li>
+    <li class="page-item"><a href="#" class="page-link">99</a></li>
     <li class="page-item">
       <a class="page-link" href="#" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
