--- a/test/visual/tooltip.html
+++ b/test/visual/tooltip.html
@@ -34,6 +34,14 @@
 <script type="text/javascript" src="../../js/equalize.js"></script>
 <script type="text/javascript" src="../../js/common.js"></script>
 
+<style>
+.tooltip .tooltip-body {
+    width: 100px;
+    height: 100px;
+    max-width: none;
+}
+</style>
+
 </head>
 <body>
 
@@ -43,7 +51,9 @@
 
 <button class="btn btn-default float-end" title="Tooltip at end" data-cfw="tooltip" data-cfw-tooltip-placement="forward auto">Tooltip at end</button>
 
-<button class="btn btn-default" style="position: absolute; bottom: 0;" title="Tooltip at bottom" data-cfw="tooltip" data-cfw-tooltip-placement="bottom auto">Tooltip at bottom</button>
+<button class="btn btn-default" style="position: absolute; left: 0; bottom: 0;" title="Tooltip at bottom" data-cfw="tooltip" data-cfw-tooltip-placement="bottom auto">Tooltip at bottom</button>
+
+<button class="btn btn-default" style="position: absolute; left: 12rem; bottom: 0;" title="Tooltip at bottom" data-cfw="tooltip" data-cfw-tooltip-placement="forward">Tooltip at bottom</button>
 
 
 <button class="btn btn-default" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-drag="true" data-cfw-popover-content="Wow">Popover at top</button>
